# BilinearImageResize

./: CMakeLists.txt  LICENSE  Otchet.docx  README.md  main.cpp  windows_make.bat
include/: converter.hpp  resizeCPU.hpp  resizeGPU.cuh  resizeOMP.hpp
sources/: converter.cpp  resizeCPU.cpp  resizeGPU.cu  resizeOMP.cpp
